# Hyacinth

./: CMakeLists.txt  CMakePresets.json
Example/: bonechar.glb  fragment.glsl  test.rmd  vertex.glsl
HyaTool/: FileSystem.h  Main.cpp  RMD.h  RSD.h
Hyacinth/: Main.cpp
Hyacinth/Core/: FileSystem.h  Window.h
Hyacinth/Renderer/: Camera.h  Mesh.h  Renderer.h  Shader.h  Texture.h
